# QA-agent

./: .coveragerc  .gitattributes  .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  sample.md  system_prompt.txt
.github/workflows/: qa_agent.yml
langchain_project/: __init__.py  __main__.py  main.py
langchain_project/agents/: __init__.py  chatbot_agent.py
langchain_project/tests/: conftest.py
langchain_project/tests/agents/: test_chatbot_agent.py
langchain_project/tests/tools/: test_dice_tools.py  test_file_tools.py  test_math_tools.py  test_weather_tools.py
langchain_project/tools/: README.md  __init__.py  dice_tools.py  file_tools.py  git_tools.py  math_tools.py  weather_tools.py
