[project]
name = "langchain_project"
version = "0.1.0"
description = "Langchain Project"
authors = [{ name = "Felipe Genú", email = "felipe.genu@marlo.com.au" }]
requires-python = ">=3.12"
readme = "README.md"

dependencies = [
  "langchain~=1.2.10",
  "langchain-community~=0.4.1",
  "langchain-openai~=1.1.10",
  "dotenv~=0.9.9",
]

[dependency-groups]
dev = [
  "genbadge[tests]~=1.1",
  "hypothesis~=6.75",
  "jq~=1.6",
  "pytest~=7.3",
  "pytest-cov~=4.1",
  "pytest-html~=3.2",
  "ruff~=0.4",
  "taplo~=0.9",
  "yamllint~=1.32",
  "anybadge~=1.14",
  "pdoc~=13.1",
]

[project.urls]
# Repository = "wip"
# "Confluence Page" = "wip"

# Build system configuration for uv
# [build-system]
# requires = ["uv>=0.1.17"]
# build-backend = "uv_build"
# backend-path = ["."]

# Placeholder for any uv-specific configurations in the future
[tool.uv]
# Example:
# native-tls = true
