[project]
name = "qa-agent"
version = "0.1.0"
description = "An AI agent with a few tools"
authors = [
{ name = "Felipe Genú", email = "felipe.genu@marlo.com.au" },
{ name = "José Macedo", email = "jose.macedo@marlo.com.au" }
]
requires-python = ">=3.12"
readme = "README.md"
dependencies = [
  "langchain~=1.2.10",
  "langchain-community~=0.4.1",
  "langchain-openai~=1.1.10",
  "dotenv~=0.9.9",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["langchain_project", "langchain_project.tools"]

[project.scripts]
run-agent = "langchain_project.main:main"